aks_deploy_manifest/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: centralusacr.azurecr.io/backstage/backstage:1.21.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
